syntax = "proto3";

option csharp_namespace = "AuthorGrpcService";

package authors;

message AuthorRequest {
  int32 id = 1;
}

message AuthorReply {
  int32 id = 1;
  string name = 2;
}

service AuthorService {
  rpc GetAuthor (AuthorRequest) returns (AuthorReply);
}